--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,5 +1,9 @@
 requirements.txt
 
+streamlit>=1.28
+snowflake-snowpark-python>=0.9.0
+snowflake-connector-python>=2.8.0
+
 python=3.11
 
 snowflake-snowpark-python
